fix: use shrink instead overflow

--- a/uui/components/pickers/PickerTogglerTag.module.scss
+++ b/uui/components/pickers/PickerTogglerTag.module.scss
@@ -3,9 +3,6 @@
     max-height: 150px;
 }
 
-.visibleContent {
-    > div {
-        overflow: visible !important;
-        width: fit-content;
-    }
+.noShrink {
+    flex-shrink: 0;
 }
